--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/spanner/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/spanner/BUILD.bazel
@@ -1,22 +1,28 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
-kt_jvm_library(
-    name = "services",
-    srcs = glob(["*Service.kt"]),
-    visibility = [
-        "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy:__subpackages__",
-        "//src/test/kotlin/org/wfanet/measurement/securecomputation/deploy:__subpackages__",
-    ],
-    deps = [
-        "//src/main/kotlin/org/wfanet/measurement/common:id_generator",
-        "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/spanner/db",
-        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal:work_item_publisher",
-        "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_item_attempts_service_kt_jvm_grpc_proto",
-        "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_items_service_kt_jvm_grpc_proto",
-        "@wfa_common_jvm//imports/java/com/google/cloud/spanner",
-        "@wfa_common_jvm//imports/java/io/grpc:api",
-        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner",
-    ],
-)
+    kt_jvm_library(
+        name = "services", srcs = glob(["*Service.kt"]),
+        visibility =
+            [
+              "//src/main/kotlin/org/wfanet/measurement/securecomputation/"
+              "deploy:__subpackages__",
+              "//src/test/kotlin/org/wfanet/measurement/securecomputation/"
+              "deploy:__subpackages__",
+            ],
+        deps = [
+          "//src/main/kotlin/org/wfanet/measurement/common:id_generator",
+          "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/"
+          "gcloud/spanner/db",
+          "//src/main/kotlin/org/wfanet/measurement/securecomputation/service/"
+          "internal:work_item_publisher",
+          "//src/main/proto/wfa/measurement/internal/securecomputation/"
+          "controlplane:work_item_attempts_service_kt_jvm_grpc_proto",
+          "//src/main/proto/wfa/measurement/internal/securecomputation/"
+          "controlplane:work_items_service_kt_jvm_grpc_proto",
+          "@wfa_common_jvm//imports/java/com/google/cloud/spanner",
+          "@wfa_common_jvm//imports/java/io/grpc:api",
+          "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
+          "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+          "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/"
+          "spanner",
+        ], )
