--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal/BUILD.bazel
@@ -1,39 +1,42 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
-package(
-    default_visibility = [
-        "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:__subpackages__",
-        "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy:__subpackages__",
-        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:__subpackages__",
-        "//src/test/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:__subpackages__",
-    ],
-)
+    package(default_visibility =
+                [
+                  "//src/main/kotlin/org/wfanet/measurement/securecomputation/"
+                  "controlplane/v1alpha:__subpackages__",
+                  "//src/main/kotlin/org/wfanet/measurement/securecomputation/"
+                  "deploy:__subpackages__",
+                  "//src/main/kotlin/org/wfanet/measurement/securecomputation/"
+                  "service:__subpackages__",
+                  "//src/test/kotlin/org/wfanet/measurement/securecomputation/"
+                  "controlplane/v1alpha:__subpackages__",
+                ], )
 
-kt_jvm_library(
-    name = "errors",
-    srcs = ["Errors.kt"],
-    deps = [
-        "//src/main/kotlin/org/wfanet/measurement/common/grpc:error_info",
-        "//src/main/proto/google/rpc:error_details_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_item_attempts_service_kt_jvm_grpc_proto",
-        "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_items_service_kt_jvm_grpc_proto",
-        "@wfa_common_jvm//imports/java/io/grpc:api",
-    ],
-)
+        kt_jvm_library(
+            name = "errors", srcs = ["Errors.kt"],
+            deps =
+                [
+                  "//src/main/kotlin/org/wfanet/measurement/common/"
+                  "grpc:error_info",
+                  "//src/main/proto/google/rpc:error_details_kt_jvm_proto",
+                  "//src/main/proto/wfa/measurement/internal/securecomputation/"
+                  "controlplane:work_item_attempts_service_kt_jvm_grpc_proto",
+                  "//src/main/proto/wfa/measurement/internal/securecomputation/"
+                  "controlplane:work_items_service_kt_jvm_grpc_proto",
+                  "@wfa_common_jvm//imports/java/io/grpc:api",
+                ], )
 
-kt_jvm_library(
-    name = "queue_mapping",
-    srcs = ["QueueMapping.kt"],
-    deps = [
-        "//src/main/proto/wfa/measurement/config/securecomputation:queues_config_kt_jvm_proto",
-        "@wfa_common_jvm//imports/java/com/google/common:guava",
-    ],
-)
+            kt_jvm_library(
+                name = "queue_mapping", srcs = ["QueueMapping.kt"],
+                deps =
+                    [
+                      "//src/main/proto/wfa/measurement/config/"
+                      "securecomputation:queues_config_kt_jvm_proto",
+                      "@wfa_common_jvm//imports/java/com/google/common:guava",
+                    ], )
 
-kt_jvm_library(
-    name = "work_item_publisher",
-    srcs = ["WorkItemPublisher.kt"],
-    deps = [
-        "@wfa_common_jvm//imports/java/com/google/protobuf",
-    ],
-)
+                kt_jvm_library(
+                    name = "work_item_publisher",
+                    srcs = ["WorkItemPublisher.kt"], deps = [
+                      "@wfa_common_jvm//imports/java/com/google/protobuf",
+                    ], )
