feat: Support media_types and event_group_metadata in EventGroup
This implements support for the new fields in the CMMS public API.

--- a/src/main/proto/wfa/measurement/api/v2alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/api/v2alpha/BUILD.bazel
@@ -25,6 +25,7 @@ MESSAGE_LIBS = [
     ":duchy_proto",
     ":event_annotations_proto",
     ":event_group_proto",
+    ":event_group_metadata_proto",
     ":event_group_metadata_descriptor_proto",
     ":event_template_proto",
     ":exchange_proto",
@@ -34,6 +35,7 @@ MESSAGE_LIBS = [
     ":measurement_proto",
     ":measurement_consumer_proto",
     ":measurement_spec_proto",
+    ":media_type_proto",
     ":model_line_proto",
     ":model_outage_proto",
     ":model_provider_proto",
