--- a/src/main/resources/kingdom/spanner/changelog.yaml
+++ b/src/main/resources/kingdom/spanner/changelog.yaml
@@ -78,3 +78,6 @@ databaseChangeLog:
 - include:
     file: null-filter-measurements-by-continuation-token.sql
     relativeToChangeLogFile: true
+- include:
+    file: add-event-group-media-types.sql
+    relativeToChangeLogFile: true
