--- a/src/main/kotlin/org/wfanet/measurement/gcloud/testing/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/gcloud/testing/BUILD.bazel
@@ -6,6 +6,7 @@ package(
         "//src/main/kotlin/org/wfanet/measurement/edpaggregator:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/edpaggregator:__subpackages__",
+        "//src/test/kotlin/org/wfanet/measurement/integration:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/securecomputation:__subpackages__",
     ],
 )
