--- a/src/test/kotlin/org/wfanet/measurement/integration/deploy/gcloud/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/integration/deploy/gcloud/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@rules_java//java:defs.bzl", "java_test")
 load("@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner/testing:macros.bzl", "spanner_emulator_test")
-load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
+load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library", "kt_jvm_test")
 
 package(default_testonly = True)
 
@@ -164,4 +164,37 @@ java_test(
     # TODO(world-federation-of-advertisers/cross-media-measurement#827): Remove when flakiness is resolved.
     test_class = "org.wfanet.measurement.integration.deploy.gcloud.GCloudInProcessAccessCliIntegrationTest",
     runtime_deps = [":gcloud_in_process_access_cli_integration_test"],
+)
+
+kt_jvm_test(
+    name = "InProcessEdpAggregatorTest",
+    srcs = ["InProcessEdpAggregatorTest.kt"],
+    data = [
+        "//src/main/k8s/testing/secretfiles:root_certs",
+        "//src/main/k8s/testing/secretfiles:secret_files",
+        "//src/test/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher:InvokeDataWatcherFunction",
+        "//src/test/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher:config",
+    ],
+    test_class = "org.wfanet.measurement.integration.deploy.gcloud.InProcessEdpAggregatorTest",
+    deps = [
+        "//src/main/kotlin/org/wfanet/measurement/gcloud/testing",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:work_items_service",
+        "//src/main/proto/wfa/measurement/api/v2alpha:requisitions_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/config/securecomputation:data_watcher_config_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_kt_jvm_proto",
+        "//src/test/kotlin/org/wfanet/measurement/edpaggregator/deploy/gcloud/requisitionfetcher:InvokeRequisitionFetcherFunction",
+        "//src/test/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher:InvokeDataWatcherFunction",
+        "@wfa_common_jvm//imports/java/com/google/cloud/storage/contrib/nio",
+        "@wfa_common_jvm//imports/java/com/google/common/truth",
+        "@wfa_common_jvm//imports/java/com/google/protobuf",
+        "@wfa_common_jvm//imports/java/io/cloudevents/core",
+        "@wfa_common_jvm//imports/java/org/junit",
+        "@wfa_common_jvm//imports/kotlin/com/google/protobuf/kotlin",
+        "@wfa_common_jvm//imports/kotlin/kotlin/test",
+        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
+        "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc/testing",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/gcs",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/gcs/testing",
+    ],
 )
