--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal/BUILD.bazel
@@ -3,10 +3,22 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 package(
     default_visibility =
         [
+            "//src/main/kotlin/org/wfanet/measurement/integration/common:__subpackages__",
             "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:__subpackages__",
             "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy:__subpackages__",
             "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:__subpackages__",
             "//src/test/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:__subpackages__",
+        ],
+)
+
+kt_jvm_library(
+    name = "services",
+    srcs = ["Services.kt"],
+    deps =
+        [
+            "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_item_attempts_service_kt_jvm_grpc_proto",
+            "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_items_service_kt_jvm_grpc_proto",
+            "@wfa_common_jvm//imports/java/io/grpc:api",
         ],
 )
 
