--- a/src/main/k8s/testing/secretfiles/secure_computation_secrets_kustomization.yaml
+++ b/src/main/k8s/testing/secretfiles/secure_computation_secrets_kustomization.yaml
@@ -15,6 +15,6 @@
 secretGenerator:
   - name: signing
     files:
-      - secure_computation_control_plane_root.pem
-      - secure_computation_control_plane_tls.pem
-      - secure_computation_control_plane_tls.key
+      - secure_computation_root.pem
+      - secure_computation_tls.pem
+      - secure_computation_tls.key
