--- a/src/main/kotlin/org/wfanet/measurement/common/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/common/BUILD.bazel
@@ -39,3 +39,8 @@ kt_jvm_library(
     name = "id_generator",
     srcs = ["IdGenerator.kt"],
 )
+
+kt_jvm_library(
+    name = "class_loader_resources",
+    srcs = ["ClassLoaderResources.kt"],
+)
