address requested changes

--- a/src/main/proto/wfa/measurement/edpaggregator/eventgroups/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/edpaggregator/eventgroups/v1alpha/BUILD.bazel
@@ -32,6 +32,10 @@ proto_library(
     name = "event_group_map_proto",
     srcs = ["event_group_map.proto"],
     strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+    ],
 )
 
 kt_jvm_proto_library(
