--- a/src/main/proto/wfa/measurement/edpaggregator/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/edpaggregator/v1alpha/BUILD.bazel
@@ -6,24 +6,12 @@ package(default_visibility = ["//visibility:public"])
 _IMPORT_PREFIX = "/src/main/proto"
 
 proto_library(
-    name = "labeled_impression_proto",
-    srcs = ["labeled_impression.proto"],
-    strip_import_prefix = _IMPORT_PREFIX,
-    deps = [
-        "@com_google_protobuf//:any_proto",
-        "@com_google_protobuf//:timestamp_proto",
-    ],
-)
-
-kt_jvm_proto_library(
-    name = "labeled_impression_kt_jvm_proto",
-    deps = [":labeled_impression_proto"],
-)
-
-proto_library(
     name = "encrypted_dek_proto",
     srcs = ["encrypted_dek.proto"],
     strip_import_prefix = _IMPORT_PREFIX,
+    deps = [
+        "@com_google_googleapis//google/api:field_behavior_proto",
+    ],
 )
 
 kt_jvm_proto_library(
