Update unit tests.

--- a/src/main/python/wfa/measurement/reporting/postprocessing/report/BUILD.bazel
+++ b/src/main/python/wfa/measurement/reporting/postprocessing/report/BUILD.bazel
@@ -8,6 +8,7 @@ py_library(
     visibility = ["//visibility:public"],
     deps = [
         "//src/main/python/wfa/measurement/reporting/postprocessing/noiseninja",
+        "//src/main/proto/wfa/measurement/reporting/postprocessing/v2alpha:report_post_processor_result_py_pb2",
         requirement("absl-py"),
     ],
 )
