--- a/src/main/proto/wfa/measurement/edpaggregator/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/edpaggregator/v1alpha/BUILD.bazel
@@ -20,3 +20,14 @@ kt_jvm_proto_library(
     name = "labeled_impression_kt_jvm_proto",
     deps = [":labeled_impression_proto"],
 )
+
+proto_library(
+    name = "results_fulfiller_config_proto",
+    srcs = ["results_fulfiller_config.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+)
+
+kt_jvm_proto_library(
+    name = "results_fulfiller_config_kt_jvm_proto",
+    deps = [":results_fulfiller_config_proto"],
+)
